samples/_failures_safe/1761455361_033f14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fdea8a0.c: In function ‘main’:
./samples/SAFE/__tmp_3fdea8a0.c:156:5: error: expected expression at end of input
  156 |     if (a < 0 || b < 0 || c < 0 ||
      |     ^~
./samples/SAFE/__tmp_3fdea8a0.c:156:5: error: expected declaration or statement at end of input
